revert workaround for issue on coverflow swipe gestures

--- a/app/assets/stylesheets/layouts/_donor-coverflow-kiosk.scss
+++ b/app/assets/stylesheets/layouts/_donor-coverflow-kiosk.scss
@@ -15,11 +15,6 @@
     }
   }
 
-  .coverflow-container figure:first-child,
-  .coverflow-container figure:last-child {
-    display: none;
-  }
-
   *:focus {
     outline: none;
   }
